syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "thesis/poc";

package controller;

service Controller {
  rpc GetParams(google.protobuf.Empty) returns (JobParameters) {}
  rpc SetOutput(JobOutput) returns (google.protobuf.Empty) {}
}

message JobParameters {
  string id = 1;
  string message = 2;
}

message JobOutput {
  string id = 1;
  string output = 2;
}
