syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "thesis/proto";
package worker;

service Worker {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc RunJob(JobParameters) returns (JobOutput) {}
}

message JobParameters {
  string id = 1;
  string message = 2;
}

message JobOutput {
  string id = 1;
  string output = 2;
}
